# python-opencage-geocoder

./: .flake8  .gitignore  .travis.yml  Changes.txt  LICENSE.txt  README.md  Vagrantfile  demo.py  flask_demo.py  pylintrc  pyproject.toml  pytest.ini  setup.py  tests.py  tox.ini  vagrant-provision.sh
.github/workflows/: build.yml
docs/: Makefile  conf.py  hacking.rst  index.rst  make.bat
examples/: addresses.csv  batch.py  demo.py  file_geocoded.csv  flask_demo.py
opencage/: __init__.py  batch.py  command_line.py  geocoder.py
opencage_cli/: __init__.py  _helpers.py  batch.py  command_line.py
test/: __init__.py  test_all.py  test_async.py  test_batch.py  test_error_blocked.py  test_error_invalid_input.py  test_error_not_authorized.py  test_error_ratelimit_exceeded.py  test_error_ssl.py  test_error_unknown.py  test_flotify_dict.py  test_geocoder_args.py  test_headers.py  test_ratelimit_properties.py  test_reverse.py  test_session.py  test_setting_protocol.py
test/cli/: test_cli_args.py  test_cli_run.py
test/fixtures/: 401_not_authorized.json  402_rate_limit_exceeded.json  403_apikey_disabled.json  australia.json  badssl-com-chain.pem  donostia.json  mudgee_australia.json  muenster.json  no_ratelimit.json  uk_postcode.json
test/fixtures/cli/: forward.csv  forward_noresult.csv  forward_with_headers.csv  output.csv2  reverse.csv  reverse_with_errors.csv
