[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencage-cli"
dynamic = ["version"]
description = "Command-line tool for the OpenCage Geocoding API"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
authors = [{name = "OpenCage GmbH", email = "info@opencagedata.com"}]
keywords = ["geocoding", "geocoder", "cli", "command-line", "batch"]
classifiers = [
    "Environment :: Console",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Utilities",
]
dependencies = [
    "opencage>=3.3.1",
    "tqdm>=4.66.4",
    "backoff>=2.2.1",
    "certifi>=2024.07.04",
]

[project.optional-dependencies]
dev = [
    "responses>=0.25.7",
    "flake8>=7.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
opencage = "opencage_cli.command_line:main"

[project.urls]
Repository = "https://github.com/OpenCageData/opencage-cli"
Download = "https://github.com/OpenCageData/opencage-cli"

[tool.setuptools.dynamic]
version = {attr = "opencage_cli.version.__version__"}

[tool.coverage.run]
branch = true
source = ["opencage_cli"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
